[tool.poetry]
name = "url-shortener"
version = "0.3.0"
description = "This API handles the process of converting long URLs into shortcodes to ease the use of passing URLs between users and systems."
authors = ["Jamie Sgro <jamie.sgro@uwaterloo.ca>"]

[tool.poetry.dependencies]
python = "^3.9.6"
redis = "^3.5.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.1.8"]
build-backend = "poetry.core.masonry.api"